Free Code Camp - JS

--- a/JS/FreeCodeCamp/html/index.html
+++ b/JS/FreeCodeCamp/html/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="../Dados.js"></script>
+   <script src="../SequenciaString.js">
+
+   
+   </script>
 </body>
 </html>
